2005-12-18  Manish Singh  <yosh@gimp.org>

	* plug-ins/script-fu/siod-wrapper.c: Finish the reverting here.

2005-12-16  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/siod/siod.h
	* plug-ins/script-fu/siod/sliba.c: Reverted changes to handling
	of string arrays to stay backward compatible (see bug #168290 and
	bug #317634). These files were not reverted when other files were.

2005-12-16  Michael Natterer  <mitch@gimp.org>

	* plug-ins/common/screenshot.c (shoot_dialog): cleaned up the GUI.

2005-12-16  Sven Neumann  <sven@gimp.org>

	* app/paint/paint-enums.[ch]: changed description of
	GIMP_CLONE_ALIGN_NO enum value.

	* app/tools/gimpclonetool.c (gimp_clone_options_gui): use a combo
	box for the align mode.

2005-12-14  Sven Neumann  <sven@gimp.org>

	* libgimpbase/gimpprotocol.[ch]: declare gp_params_destroy() in
	the private header file.

	* libgimp/gimp.c (gimp_destroy_params): removed extern declaration.

	* libgimpbase/gimpenv.h: changed parameter name to match what's
	used in gimpenv.c.

	* libgimpbase/gimpreloc.c: changed comments to please gtk-doc.

2005-12-13  Sven Neumann  <sven@gimp.org>

	* libgimpbase/gimpwire.[ch]: let the private wire methods live in
	the GIMP namespace. Declare internal functions as such and prefix
	them with an underscore.

	* libgimp/gimp.c
	* libgimp/gimptile.c
	* libgimpbase/gimpbase.def
	* libgimpbase/gimpprotocol.c
	* app/plug-in/plug-in-message.[ch]
	* app/plug-in/plug-in-run.c
	* app/plug-in/plug-in.c: changed accordingly.

2005-12-13  Michael Natterer  <mitch@gimp.org>

	* app/tools/*.c: port to G_DEFINE_TYPE() and friends. Some related
	cleanup.

2005-12-12  Michael Schumacher  <schumaml@cvs.gnome.org>

	* plug-ins/script-fu/siod/slib.c: added a fix for the script-fu
	crash in chinese (and maybe other) locales. Applied to both
	branches. Fixes bug #163212. 

2005-12-11  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpstrokedesc.c (gimp_stroke_desc_new): fall back to