@@ -1,3 +1,8 @@
+2005-12-19  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/svg.c: fixed handling of librsvg API change,
+	based on a patch by S. Mukund (bug #314400).
+
 2005-12-18  Manish Singh  <yosh@gimp.org>
 
 	* plug-ins/script-fu/siod-wrapper.c: Finish the reverting here.
